--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
     "autoprefixer": "^10.4.12",
     "dotenv": "^16.0.3",
+    "eleventy-plugin-bibtex": "^0.1.1",
     "html5shiv": "^3.7.3",
     "markdown-it-anchor": "^8.6.5",
     "modularscale-sass": "^3.0.10",
@@ -59,5 +60,9 @@
     "uglify-js": "^3.15.4",
     "uslug": "^1.0.4",
     "version-bump-prompt": "^6.1.0"
+  },
+  "dependencies": {
+    "autolinker": "^4.0.0",
+    "citation-js": "^0.7.1"
   }
 }
