--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@11ty/eleventy": "^2.0.1",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
+    "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.12",
     "dotenv": "^16.0.3",
     "eleventy-plugin-bibtex": "^0.1.1",
@@ -53,10 +54,12 @@
     "node-fetch": "^2.6.7",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
+    "postcss": "^8.4.31",
     "postcss-cli": "^10.0.0",
     "require-dir": "^1.2.0",
     "sass": "^1.55.0",
     "smartypants": "^0.1.6",
+    "tailwindcss": "^3.3.3",
     "uglify-js": "^3.15.4",
     "uslug": "^1.0.4",
     "version-bump-prompt": "^6.1.0"
