--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@11ty/eleventy": "^2.0.1",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^4.1.0",
+    "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.12",
     "daisyui": "^3.9.2",
@@ -67,6 +68,8 @@
     "version-bump-prompt": "^6.1.0"
   },
   "dependencies": {
+    "@citation-js/plugin-bibtex": "^0.7.1",
+    "@citation-js/plugin-csl": "^0.7.1",
     "autolinker": "^4.0.0",
     "citation-js": "^0.7.1"
   }
