--- a/package.json
+++ b/package.json
@@ -3,40 +3,19 @@
   "version": "6.4.10",
   "description": "tempertemper's website",
   "scripts": {
-    "clear": "rm -rf dist",
-    "scss:dev": "sass --embed-source-map --style=compressed src/scss/critical.scss tmp/scss/critical.css && sass --style=compressed src/scss/non-critical.scss dist/assets/css/non-critical.css",
-    "scss": "sass --style=compressed --no-source-map src/scss/critical.scss src/site/_includes/critical.css && sass --style=compressed --no-source-map src/scss/non-critical.scss dist/assets/css/non-critical.css",
-    "autoprefixer:dev": "postcss tmp/scss/critical.css --output src/site/_includes/critical.css --use autoprefixer && postcss dist/assets/css/non-critical.css --use autoprefixer --map --replace",
-    "autoprefixer": "postcss src/site/_includes/critical.css dist/assets/css/non-critical.css --use autoprefixer --no-map --replace",
-    "styles:dev": "npm run scss:dev && npm run autoprefixer:dev",
-    "styles": "npm run scss && npm run autoprefixer",
-    "styles:legacy": "sass --no-source-map src/scss/etc/ie8.scss dist/assets/css/ie8.css && sass --no-source-map src/scss/etc/ie9.scss dist/assets/css/ie9.css",
-    "styles:print": "sass --no-source-map src/scss/etc/print.scss dist/assets/css/print.css",
-    "js": "cat src/js/* > src/site/_includes/scripts.js && uglifyjs src/site/_includes/scripts.js -m -o src/site/_includes/scripts.js",
-    "shiv": "mkdir -p dist/assets/js/ && cp node_modules/html5shiv/dist/html5shiv.min.js dist/assets/js/html5shiv.min.js",
-    "build:assets": "npm run styles && npm run autoprefixer && npm run js && npm run styles:print && npm run styles:legacy && npm run shiv",
-    "build:devassets": "npm run styles:dev && npm run autoprefixer:dev && npm run js && npm run styles:print && npm run styles:legacy && npm run shiv",
-    "build:site": "npx @11ty/eleventy",
-    "build:dev": "npm run clear && npm run build:devassets && npm run build:site",
-    "build": "npm run clear && npm run build:assets && npm run build:site",
-    "serve": "npx @11ty/eleventy --serve --quiet",
-    "watch:css": "onchange 'src/scss' --exclude 'src/scss/etc/ie8.scss' --exclude 'src/scss/etc/ie9.scss' -- npm run styles:dev && npm run autoprefixer:dev",
-    "watch:legacycss": "onchange 'src/scss/etc/ie8.scss' 'src/scss/etc/ie9.scss' -- npm run styles:legacy",
-    "watch:printcss": "onchange 'src/scss/etc/print.scss' -- npm run styles:print",
-    "watch:js": "onchange 'src/js' -- npm run js",
-    "watch": "run-p watch:css watch:js watch:legacycss",
-    "start": "npm run clear && npm run build:devassets && run-p serve watch",
-    "staging": "npm run build && echo 'User-agent: *\nDisallow: /' > dist/robots.txt",
-    "bump:major": "bump major --commit 'Bumps version number to %s' src/site/_data/site.js *.json",
-    "bump:minor": "bump minor --commit 'Bumps version number to %s' src/site/_data/site.js *.json",
-    "bump:patch": "bump patch --commit 'Bumps version number to %s' src/site/_data/site.js *.json"
+    "build": "cross-env NODE_ENV=production npm-run-all clean -p build:*",
+    "build:11ty": "eleventy --quiet",
+    "build:rollup": "rollup -c",
+    "clean": "rimraf dist",
+    "dev": "npm-run-all clean build:* -p dev:*",
+    "dev:11ty": "eleventy --serve",
+    "dev:rollup": "rollup -c -w"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/tempertemper/tempertemper.net"
   },
-  "author": "Martin Underhill",
-  "license": "ISC",
+  "author": "Michael Dirnberger",
   "bugs": {
     "url": "https://github.com/tempertemper/tempertemper.net/issues"
   },
@@ -57,17 +36,24 @@
     "node-fetch": "^2.6.7",
     "npm-run-all": "^4.1.5",
     "onchange": "^7.1.0",
-    "postcss": "^8.4.31",
-    "postcss-cli": "^10.0.0",
     "require-dir": "^1.2.0",
     "sass": "^1.55.0",
     "smartypants": "^0.1.6",
     "tailwindcss": "^3.3.3",
     "uglify-js": "^3.15.4",
     "uslug": "^1.0.4",
-    "version-bump-prompt": "^6.1.0"
-  },
-  "dependencies": {
+    "@rollup/plugin-replace": "^4.0.0",
+    "cross-env": "^7.0.3",
+    "npm-run-all": "^4.1.5",
+    "postcss": "^8.4.6",
+    "postcss-import": "^14.0.2",
+    "postcss-nested": "^5.0.6",
+    "prettier": "^2.5.1",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.68.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-svg": "^2.0.0",
+    "rollup-plugin-terser": "^7.0.2",
     "@citation-js/plugin-bibtex": "^0.7.1",
     "@citation-js/plugin-csl": "^0.7.1",
     "autolinker": "^4.0.0",
