--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "clean": "rimraf dist",
     "dev": "npm-run-all clean build:* -p dev:*",
     "dev:11ty": "eleventy --serve",
-    "dev:rollup": "rollup -c -w"
+    "dev:rollup": "rollup -c -w",
+    "start": "npm run dev"
   },
   "repository": {
     "type": "git",
