--- a/package.json
+++ b/package.json
@@ -14,11 +14,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/"
+    "url": "https://github.com/05dirnbe/sarah-website.git/"
   },
   "author": "Michael Dirnberger",
   "bugs": {
-    "url": "https://github.com//issues"
+    "url": "https://github.com/05dirnbe/sarah-website.git//issues"
   },
   "devDependencies": {
     "@11ty/eleventy": "^2.0.1",
